Apply new rules and tidy up