@@ -43,7 +43,6 @@ import jakarta.json.JsonObject;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -827,7 +826,7 @@ public class SearchTui extends ToolPanel {
                         }
                         String k = g + ":" + artId;
                         if (!versionCache.containsKey(k)) {
-                            versionCache.put(k, vers.isEmpty() ? Collections.singletonList("") : vers);
+                            versionCache.put(k, vers.isEmpty() ? List.of("") : vers);
                         }
                     }));
         }
